@@ -1,5 +1,6 @@
 package de.unistuttgart.ims.coref.annotator;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -9,8 +10,9 @@ import org.eclipse.collections.api.set.MutableSet;
 import org.eclipse.collections.impl.factory.Sets;
 import org.reflections.Reflections;
 
-import de.unistuttgart.ims.coref.annotator.plugins.AbstractXmiPlugin;
-import de.unistuttgart.ims.coref.annotator.plugins.DefaultIOPlugin;
+import de.unistuttgart.ims.coref.annotator.plugins.AbstractExportPlugin;
+import de.unistuttgart.ims.coref.annotator.plugins.AbstractImportPlugin;
+import de.unistuttgart.ims.coref.annotator.plugins.DefaultImportPlugin;
 import de.unistuttgart.ims.coref.annotator.plugins.DefaultStylePlugin;
 import de.unistuttgart.ims.coref.annotator.plugins.EntityRankingPlugin;
 import de.unistuttgart.ims.coref.annotator.plugins.IOPlugin;
@@ -29,10 +31,12 @@ public class PluginManager {
 		Annotator.logger.trace("Initialising plugin manager");
 		Reflections reflections = new Reflections("de.unistuttgart.ims.coref.annotator.plugin.");
 		MutableSet<Class<? extends IOPlugin>> ioPlugins = Sets.mutable
-				.withAll(reflections.getSubTypesOf(IOPlugin.class));
+				.withAll(reflections.getSubTypesOf(IOPlugin.class)).select(c -> !c.isInterface());
+
 		// it's unclear why this is found in the first place
-		ioPlugins.remove(DefaultIOPlugin.class);
-		ioPlugins.remove(AbstractXmiPlugin.class);
+		ioPlugins.remove(DefaultImportPlugin.class);
+		ioPlugins.remove(AbstractImportPlugin.class);
+		ioPlugins.remove(AbstractExportPlugin.class);
 		this.ioPlugins = ioPlugins.toImmutable();
 
 		rankingPlugins = Sets.immutable.withAll(reflections.getSubTypesOf(EntityRankingPlugin.class));
@@ -46,7 +50,7 @@ public class PluginManager {
 		Annotator.logger.info("Found ProcessingPlugins: {}",
 				StringUtils.join(processingPlugins.castToCollection(), ','));
 
-		instances.put(DefaultIOPlugin.class, new DefaultIOPlugin());
+		instances.put(DefaultImportPlugin.class, new DefaultImportPlugin());
 		instances.put(DefaultStylePlugin.class, new DefaultStylePlugin());
 	}
 
@@ -54,12 +58,16 @@ public class PluginManager {
 		return ioPlugins;
 	}
 
+	public ImmutableSet<? extends IOPlugin> getIOPluginObjects() {
+		return ioPlugins.collect(i -> getPlugin(i));
+	}
+
 	public ImmutableSet<Class<? extends StylePlugin>> getStylePlugins() {
 		return stylePlugins;
 	}
 
-	public IOPlugin getDefaultIOPlugin() {
-		return getIOPlugin(DefaultIOPlugin.class);
+	public DefaultImportPlugin getDefaultIOPlugin() {
+		return getIOPlugin(DefaultImportPlugin.class);
 	}
 
 	public StylePlugin getDefaultStylePlugin() {
@@ -72,9 +80,10 @@ public class PluginManager {
 			T p;
 			try {
 				Annotator.logger.info("Creating new instance of plugin {}", cl.getName());
-				p = cl.newInstance();
+				p = cl.getDeclaredConstructor().newInstance();
 				instances.put(cl, p);
-			} catch (InstantiationException | IllegalAccessException e) {
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
 				Annotator.logger.catching(e);
 			}
 		}
@@ -85,7 +94,7 @@ public class PluginManager {
 		return getPlugin(clazz);
 	}
 
-	public IOPlugin getIOPlugin(Class<? extends IOPlugin> cl) {
+	public <T extends IOPlugin> T getIOPlugin(Class<T> cl) {
 		return getPlugin(cl);
 	}
 
